--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5433/skeleton
-spring.datasource.username=skeleton_user
-spring.datasource.password=skeleton_pass
+spring.datasource.url=jdbc:postgresql://localhost:5433/sociazadb
+spring.datasource.username=sociaza
+spring.datasource.password=${SOCIAZA_PASSWORD:sociaza_pass}
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
@@ -16,7 +16,7 @@ spring.newscatcher.api.key=824cf5a9c1msha1d80bd38a735b6p157453jsn29040a9178d1
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=geekgen.sociaza
-spring.mail.password=KS)*K6;@hj+v
+spring.mail.password=${EMAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.datasource.autoCommit=false
@@ -33,6 +33,6 @@ spring.servlet.multipart.max-request-size=215MB
 
 ## File Storage Properties
 # All files uploaded through the REST API will be stored in this directory
-file.upload-dir=/Users/manjulataarya/uploads
+file.upload-dir=/home/root/uploads
 
 ##server.port = 8080
