--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,15 @@
-version: "3.4"
+version: "3"
 services:
   database:
     image: postgres:11-alpine
     environment:
-       - POSTGRES_DB=skeleton 
-       - POSTGRES_USER=skeleton_user
-       - POSTGRES_PASSWORD=skeleton_pass
+       - POSTGRES_DB=sociazadb 
+       - POSTGRES_USER=sociaza
+       - POSTGRES_PASSWORD=sociaza_pass
     ports:
       - "5433:5432"
     volumes:
       - db-data:/var/lib/postgresql/data  
-
 volumes:
   db-data:
+  
