Build new NewsApi classes based in Newsapi

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,12 +5,12 @@ spring.datasource.username=sociaza
 spring.datasource.password=${SOCIAZA_PASSWORD:sociaza_pass}
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 ##News API
-spring.newscatcher.api.url=https://newscatcher.p.rapidapi.com/v1/latest_headlines?x-rapidapi-key=824cf5a9c1msha1d80bd38a735b6p157453jsn29040a9178d1&lang=en&country=Br
-spring.newscatcher.api.key=824cf5a9c1msha1d80bd38a735b6p157453jsn29040a9178d1
+spring.newsapi.api.url=http://newsapi.org/v2/top-headlines?country=br&category=general&apiKey=e85253b00b964bf592d4f53be2345561
+spring.newsapi.api.key=e85253b00b964bf592d4f53be2345561
 
 ##emailNotification
 spring.mail.host=smtp.gmail.com
