improve news api to call more news types

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,14 +9,14 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 ##News API
-spring.newsapi.api.url=http://newsapi.org/v2/top-headlines?country=br&category=general&apiKey=e85253b00b964bf592d4f53be2345561
-spring.newsapi.api.key=e85253b00b964bf592d4f53be2345561
+spring.newsapi.api.url=http://newsapi.org/v2/top-headlines?
+spring.newsapi.api.key=apiKey=e85253b00b964bf592d4f53be2345561
 
 ##emailNotification
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=geekgen.sociaza
-spring.mail.password=${EMAIL_PASSWORD}
+spring.mail.password=KS)*K6;@hj+v
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.datasource.autoCommit=false
